Added agentic demo app

--- a/lab/docker/vuln_lab_1/.env.template
+++ b/lab/docker/vuln_lab_1/.env.template
@@ -10,6 +10,7 @@ DTXPROMPT_GUARD_SVC_URL=http://pg:${PG_PORT}
 # docker-compose env variables
 DEMO_PORT=17860
 DEMO_RAG_PORT=17861
+DEMO_TOOL_AGENTS_PORT=17862
 OLLAMA_PORT=11436
 CACHE_TTL=3600
 CACHE_DIR=/tmp/cache
