--- a/lab/vuln_apps/demo_rag/pyproject.toml
+++ b/lab/vuln_apps/demo_rag/pyproject.toml
@@ -4,9 +4,12 @@ version = "0.3"
 description = "Damn Vulnerable GenAI Rag App"
 authors = ["jchauhan <jitendra@detoxio.ai>"]
 readme = "Readme.md"
+package-mode = false
+
 
 [tool.poetry.dependencies]
-python = "^3.10"
+#python = "^3.10"
+"python" = ">=3.11,<4.0"
 langchain = "^0.1.13"
 langchain-openai = "^0.1.0"
 faiss-cpu = "^1.8.0"
@@ -18,6 +21,7 @@ detoxio = "^0.1.15"
 markdown-builder = "^0.1.2"
 retry = "^0.9.2"
 dotenv = "^0.9.9"
+dtx-prompt-guard-client = "^0.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.0.2"
