Updated docker compose with working demo labs

--- a/lab/vuln_apps/dtx_vuln_app_lab/.env.template
+++ b/lab/vuln_apps/dtx_vuln_app_lab/.env.template
@@ -7,10 +7,14 @@ OPENAI_BASE_URL=https://api.openai.com/v1/
 PG_PORT=1800
 DTXPROMPT_GUARD_SVC_URL=http://pg:${PG_PORT}
 
+## Concurrency
+CONCURRENCY_LIMIT=1
+
 # docker-compose env variables
 DEMO_PORT=17860
 DEMO_RAG_PORT=17861
 DEMO_TOOL_AGENTS_PORT=17862
+DEMO_TEXT2SQL_AGENTS_PORT=17863
 OLLAMA_PORT=11436
 CACHE_TTL=3600
 CACHE_DIR=/tmp/cache
