--- a/lab/vuln_apps/dtx_vuln_app_lab/docker-compose.yml
+++ b/lab/vuln_apps/dtx_vuln_app_lab/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       retries: 3
     environment:
       OPENAI_API_KEY: ${OPENAI_API_KEY}
-      DTXPROMPT_GUARD_SVC_URL: http://pg:${PG_PORT}
+      DTXPROMPT_GUARD_SVC_URL: ${DTXPROMPT_GUARD_SVC_URL}
       OPENAI_BASE_URL: ${OPENAI_BASE_URL}
       ENABLE_JAILBREAK_SECURITY: ${ENABLE_JAILBREAK_SECURITY:-False}
       CONCURRENCY_LIMIT: ${CONCURRENCY_LIMIT:-1}
