--- a/lab/vuln_apps/dtx_vuln_app_lab/.env.template
+++ b/lab/vuln_apps/dtx_vuln_app_lab/.env.template
@@ -4,8 +4,12 @@ OPENAI_API_KEY=****
 OPENAI_BASE_URL=https://api.openai.com/v1/
 #OPENAI_BASE_URL=https://api.detoxio.ai/dtx.services.llms.v1.LlmPlatformProxyService/openai/v1/
 
-PG_PORT=8000
-DTXPROMPT_GUARD_SVC_URL=http://pg:${PG_PORT}
+
+#Export PG port to be exposed
+PG_PORT=18000
+
+## DO NOT CHANGE
+DTXPROMPT_GUARD_SVC_URL=http://pg:8000
 
 ## Concurrency
 CONCURRENCY_LIMIT=1
